# dioxus-toast

./: Cargo.toml  README.md
.github/workflows/: rust.yml
deploy/: Cargo.toml  Dioxus.toml
deploy/src/: main.rs
examples/: desktop.rs  hello.rs  web.rs
src/: id.rs  lib.rs  style.rs
src/assets/: toast.css
website/: Cargo.toml
website/src/: main.rs
