[package]
name = "dioxus-toast"
version = "0.2.1"
authors = ["YuKun Liu <mrxzx.info@gmail.com>"]
repository = "https://github.com/mrxiaozhuox/dioxus-toast"
license = "MIT"
description = "Add toast support in your dioxus project"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["desktop"]

desktop = ["tokio", "dioxus-desktop"]

web = ["gloo-timers", "dioxus-web"]

[dependencies]
chrono = { version = "0.4.31", features = ["wasmbind"] }
dioxus = { version = "0.4.0" }
dioxus-web = { version = "0.4.0", optional = true }
dioxus-desktop = { version = "0.4.0", optional = true }
fermi = {version = "0.4.0"}
tokio = { version = "1.34.0", features = ["time"], optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }