[package]
name = "dioxus-toast"
version = "0.3.0"
authors = ["YuKun Liu <mrxzx.info@gmail.com>"]
repository = "https://github.com/mrxiaozhuox/dioxus-toast"
license = "MIT"
description = "Add toast support in your dioxus project"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["desktop"]

desktop = ["tokio"]

web = ["gloo-timers"]

[dependencies]
chrono = { version = "0.4.38", features = ["wasmbind"] }
dioxus = { version = "0.5.6" }
tokio = { version = "1.39.3", features = ["time"], optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
