[package]
name = "dioxus-toast-online"
version = "0.1.0"
authors = ["YuKun Liu <mrxzx.info@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web"] }

log = "0.4.6"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"

dioxus-toast = { path = "../" }
